# cyxj-groksearch

./: .env.example  .gitignore  LICENSE  README.en.md  README.md  README.zh-CN.md  grok-search-launcher.sh  llms.txt  pyproject.toml
docs/superpowers/plans/: 2026-05-29-groksearch-debrand-rewrite.md
docs/superpowers/specs/: 2026-05-29-groksearch-debrand-rewrite-design.md
src/grok_search/: config.py  firecrawl_client.py  grok_client.py  http_client.py  key_pool.py  logger.py  prompts.py  server.py  sources.py  tavily_client.py
tests/: test_config.py  test_firecrawl_unified.py  test_key_pool.py  test_optimizations.py  test_server_tools.py  test_sources.py
